--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="js/lib/hud.js"></script>
 <script src="js/lib/menu.js"></script>
 <script src="js/lib/buttons.js"></script>
+<script src="js/lib/time.js"></script>
 <script src="js/lib/fade.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <script>
